// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Popover Component Snapshots > renders Tailwind Popover correctly 1`] = `
{
  "Popover.tsx": "import React, { createContext, useContext, useState } from 'react';
import {
  useFloating,
  autoUpdate,
  offset,
  flip,
  shift,
  useClick,
  useHover,
  useDismiss,
  useRole,
  useInteractions,
  safePolygon,
  Placement,
} from '@floating-ui/react';

type PopoverContextType = {
  isOpen: boolean;
  setIsOpen: (open: boolean) => void;
  variant: string;
  size: string;
  refs: ReturnType<typeof useFloating>['refs'];
  floatingStyles: React.CSSProperties;
  getReferenceProps: (userProps?: React.HTMLProps<Element>) => Record<string, unknown>;
  getFloatingProps: (userProps?: React.HTMLProps<HTMLElement>) => Record<string, unknown>;
};

const PopoverContext = createContext<PopoverContextType | undefined>(undefined);

const usePopover = () => {
  const context = useContext(PopoverContext);
  if (!context) {
    throw new Error('Popover compound components must be used within a Popover.Root');
  }
  return context;
};

export interface PopoverProps {
  /** Controlled open state */
  isOpen?: boolean;
  /** Callback for open state changes */
  onOpenChange?: (open: boolean) => void;
  /** Placement relative to trigger @default 'bottom' */
  placement?: 'top' | 'bottom' | 'left' | 'right';
  /** Alignment relative to trigger @default 'center' */
  alignment?: 'start' | 'center' | 'end';
  /** Trigger type @default 'click' */
  trigger?: 'click' | 'hover';
  /** Whether to close when clicking outside @default true */
  closeOnClickOutside?: boolean;
  /** Whether to close when pressing Escape @default true */
  closeOnEscape?: boolean;
  /** Visual variant @default 'default' */
  variant?: 'default' | 'minimal';
  /** Size @default 'md' */
  size?: 'sm' | 'md' | 'lg';
  /** Additional class name */
  className?: string;
  /** Content */
  children?: React.ReactNode;
}

/**
 * Popover.Root - Container that manages the state
 */
export const PopoverRoot: React.FC<PopoverProps> = ({
  isOpen: controlledOpen,
  onOpenChange,
  placement = 'bottom',
  alignment = 'center',
  trigger = 'click',
  closeOnClickOutside = true,
  closeOnEscape = true,
  variant = 'default',
  size = 'md',
  children,
}) => {
  const [internalOpen, setInternalOpen] = useState(false);
  const isOpen = controlledOpen !== undefined ? controlledOpen : internalOpen;

  const setIsOpen = (open: boolean) => {
    if (controlledOpen === undefined) {
      setInternalOpen(open);
    }
    onOpenChange?.(open);
  };

  const floatingPlacement = \`\${placement}\${alignment === 'center' ? '' : '-' + alignment}\` as Placement;

  const { refs, floatingStyles, context } = useFloating({
    open: isOpen,
    onOpenChange: setIsOpen,
    placement: floatingPlacement,
    middleware: [offset(8), flip(), shift({ padding: 8 })],
    whileElementsMounted: autoUpdate,
  });

  const click = useClick(context, { enabled: trigger === 'click' });
  const hover = useHover(context, { enabled: trigger === 'hover', handleClose: safePolygon() });
  const dismiss = useDismiss(context, { escapeKey: closeOnEscape, outsidePress: closeOnClickOutside });
  const role = useRole(context);

  const { getReferenceProps, getFloatingProps } = useInteractions([
    click,
    hover,
    dismiss,
    role,
  ]);

  return (
    <PopoverContext.Provider value={{ isOpen, setIsOpen, variant, size, refs, floatingStyles, getReferenceProps, getFloatingProps }}>
      {children}
    </PopoverContext.Provider>
  );
};

/**
 * Popover.Trigger - The element that toggles the popover
 */
export const PopoverTrigger: React.FC<{ children: React.ReactNode; className?: string }> = ({
  children,
  className = '',
}) => {
  const { refs, getReferenceProps } = usePopover();

  return (
    <div
      ref={refs.setReference}
      className={\`cursor-pointer inline-block \${className}\`}
      {...getReferenceProps()}
    >
      {children}
    </div>
  );
};

/**
 * Popover.Content - The floating panel
 */
export const PopoverContent: React.FC<{ children: React.ReactNode; className?: string }> = ({
  children,
  className = '',
}) => {
  const { isOpen, refs, floatingStyles, getFloatingProps, variant, size } = usePopover();

  if (!isOpen) return null;

  const variantClasses = {
    default: 'bg-[var(--color-surface)] border border-[var(--color-border)] shadow-lg',
    minimal: 'bg-[var(--color-surface)] shadow-md',
  };

  const sizeClasses = {
    sm: 'text-sm p-[calc(var(--popover-padding)*0.75)]',
    md: 'text-base p-[var(--popover-padding)]',
    lg: 'text-lg p-[calc(var(--popover-padding)*1.5)]',
  };

  return (
    <div
      ref={refs.setFloating}
      style={floatingStyles}
      className={\`
        z-[var(--popover-z-index)] 
        rounded-[var(--popover-radius)] min-w-[180px] overflow-hidden
        \${variantClasses[variant as keyof typeof variantClasses] || variantClasses.default}
        \${sizeClasses[size as keyof typeof sizeClasses] || sizeClasses.md}
        animate-in fade-in zoom-in-95 duration-200
        \${className}
      \`}
      {...getFloatingProps()}
    >
      {children}
    </div>
  );
};

/**
 * Popover.Item - An item within the popover content
 */
export const PopoverItem: React.FC<{
  children: React.ReactNode;
  className?: string;
  onClick?: () => void;
  closeOnClick?: boolean;
}> = ({ children, className = '', onClick, closeOnClick = true }) => {
  const { setIsOpen } = usePopover();

  const handleClick = () => {
    onClick?.();
    if (closeOnClick) {
      setIsOpen(false);
    }
  };

  return (
    <div 
      className={\`px-3 py-2 cursor-pointer rounded transition-colors hover:bg-[var(--color-accent)] \${className}\`} 
      onClick={handleClick}
    >
      {children}
    </div>
  );
};

/**
 * Popover.Separator - A divider between items
 */
export const PopoverSeparator: React.FC<{ className?: string }> = ({ className = '' }) => (
  <div className={\`h-px bg-[var(--color-border)] my-1 \${className}\`} />
);

/**
 * Popover.Sub - Nested popover for submenus
 */
export const PopoverSub: React.FC<{ children: React.ReactNode; className?: string }> = ({
  children,
  className = '',
}) => {
  const [isOpen, setIsOpen] = useState(false);

  return (
    <div
      className={\`relative \${className}\`}
      onMouseEnter={() => setIsOpen(true)}
      onMouseLeave={() => setIsOpen(false)}
    >
      {children}
    </div>
  );
};

/**
 * Popover.SubTrigger - Trigger for submenus
 */
export const PopoverSubTrigger: React.FC<{ children: React.ReactNode; className?: string }> = ({
  children,
  className = '',
}) => (
  <div className={\`px-3 py-2 cursor-pointer rounded transition-colors hover:bg-[var(--color-accent)] flex items-center justify-between \${className}\`}>
    {children}
  </div>
);

/**
 * Popover.SubContent - Content for submenus
 */
export const PopoverSubContent: React.FC<{ children: React.ReactNode; className?: string }> = ({
  children,
  className = '',
}) => {
  const context = usePopover();
  const variantClasses = {
    default: 'bg-[var(--color-surface)] border border-[var(--color-border)] shadow-lg',
    minimal: 'bg-[var(--color-surface)] shadow-md',
  };
  const sizeClasses = {
    sm: 'text-sm p-[calc(var(--popover-padding)*0.75)]',
    md: 'text-base p-[var(--popover-padding)]',
    lg: 'text-lg p-[calc(var(--popover-padding)*1.5)]',
  };

  return (
    <div className={\`
      absolute left-full top-0 ml-1 z-[var(--popover-z-index)]
      rounded-[var(--popover-radius)] min-w-[180px] overflow-hidden
      \${variantClasses[context.variant as keyof typeof variantClasses] || variantClasses.default}
      \${sizeClasses[context.size as keyof typeof sizeClasses] || sizeClasses.md}
      animate-in fade-in zoom-in-95 duration-200
      \${className}
    \`}>
      {children}
    </div>
  );
};

/**
 * Main Popover Component
 */
export const Popover: React.FC<PopoverProps> & {
  Root: typeof PopoverRoot;
  Trigger: typeof PopoverTrigger;
  Content: typeof PopoverContent;
  Item: typeof PopoverItem;
  Separator: typeof PopoverSeparator;
  Sub: typeof PopoverSub;
  SubTrigger: typeof PopoverSubTrigger;
  SubContent: typeof PopoverSubContent;
} = (props) => {
  return (
    <PopoverRoot {...props}>
      {props.children}
    </PopoverRoot>
  );
};

Popover.Root = PopoverRoot;
Popover.Trigger = PopoverTrigger;
Popover.Content = PopoverContent;
Popover.Item = PopoverItem;
Popover.Separator = PopoverSeparator;
Popover.Sub = PopoverSub;
Popover.SubTrigger = PopoverSubTrigger;
Popover.SubContent = PopoverSubContent;

export default Popover;",
  "README.md": "# Popover

Generated by Crucible v1.0.0 | Theme: minimal | Framework: react

## Variants
- \`default\`- \`minimal\`

## Sizes
- \`sm\`- \`md\`- \`lg\`

## States
- \`open\`- \`closed\`

## CSS Variables Used

\`\`\`css
:root {
  --card-header-padding: calc(var(--spacing-unit) * 6);
  --card-content-padding: calc(var(--spacing-unit) * 6);
  --card-footer-padding: calc(var(--spacing-unit) * 6);
  --card-border-radius: var(--radius-lg);
  --card-background-color: var(--color-surface);
  --card-border-color: var(--color-border);
  --card-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.06);
  --button-height-sm: calc(var(--spacing-unit) * 9);
  --button-height-md: calc(var(--spacing-unit) * 10);
  --button-height-lg: calc(var(--spacing-unit) * 11);
  --button-padding-x-sm: calc(var(--spacing-unit) * 3);
  --button-padding-x-md: calc(var(--spacing-unit) * 4);
  --button-padding-x-lg: calc(var(--spacing-unit) * 8);
  --button-border-radius: var(--radius-md);
  --button-font-weight: 500;
  --button-transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
  --input-height: calc(var(--spacing-unit) * 10);
  --input-padding-x: calc(var(--spacing-unit) * 3);
  --input-border-radius: var(--radius-md);
  --input-border-color: var(--color-border);
  --input-transition: border-color 0.2s ease, box-shadow 0.2s ease;
  --Dialog-padding: calc(var(--spacing-unit) * 6);
  --Dialog-border-radius: var(--radius-lg);
  --Dialog-overlay-bg: rgba(0, 0, 0, 0.4);
  --Dialog-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04);
  --Dialog-z-index: 1000;
  --select-height: calc(var(--spacing-unit) * 10);
  --select-padding-x: calc(var(--spacing-unit) * 3);
  --select-border-radius: var(--radius-md);
  --select-option-padding: calc(var(--spacing-unit) * 2.5);
  --select-dropdown-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --select-z-index: 900;
  --table-row-height: calc(var(--spacing-unit) * 10);
  --table-header-height: calc(var(--spacing-unit) * 10);
  --table-border-radius: var(--radius-md);
  --table-pagination-height: calc(var(--spacing-unit) * 8);
  --table-virtual-overscan: 5;
  --table-cell-padding: calc(var(--spacing-unit) * 3);
  --table-row-hover-bg: var(--color-secondary);
  --table-striped-bg: var(--color-background);
  --popover-background: var(--color-surface);
  --popover-border: var(--color-border);
  --popover-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --popover-radius: var(--radius-md);
  --popover-padding: calc(var(--spacing-unit) * 2);
  --popover-z-index: 50;
  --color-primary: #000;
  --color-secondary: #F3F2FF;
  --color-surface: #fff;
  --color-background: #F8F9FA;
  --color-border: #E2E1F0;
  --color-text: #1A1A2E;
  --color-text-muted: #6B6B8A;
  --color-destructive: #E24B4A;
  --color-success: #1D9E75;
  --color-primary-foreground: #fff;
  --color-secondary-foreground: #1A1A2E;
  --color-destructive-foreground: #fff;
  --color-accent-foreground: #1A1A2E;
  --foreground: #1A1A2E;
  --radius-sm: 4px;
  --radius-md: 4px;
  --radius-lg: 12px;
  --spacing-unit: 4px;
  --font-family: system-ui, sans-serif;
  --font-size-base: 16px;
}
\`\`\`


---

_This file is auto-generated. Edit the source template or run \`crucible upgrade\` after updating your config._
",
}
`;

exports[`Popover Component Snapshots > renders basic Popover correctly 1`] = `
{
  "Popover.module.css": ".popover {
  position: relative;
  display: inline-block;
}

.trigger {
  cursor: pointer;
  display: inline-block;
}

.content {
  position: absolute;
  z-index: var(--popover-z-index, 50);
  background: var(--popover-background, var(--color-surface));
  border: 1px solid var(--popover-border, var(--color-border));
  border-radius: var(--popover-radius, var(--radius-md));
  box-shadow: var(--popover-shadow, 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05));
  padding: var(--popover-padding, calc(var(--spacing-unit) * 2));
  min-width: 180px;
  overflow: hidden;
}

/* Variants */
.variant-minimal {
  border: none;
  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
}

/* Sizes */
.size-sm {
  font-size: 0.875rem;
  padding: calc(var(--popover-padding) * 0.75);
}

.size-md {
  font-size: 1rem;
}

.size-lg {
  font-size: 1.125rem;
  padding: calc(var(--popover-padding) * 1.5);
}

/* Animation */
.content-open {
  animation: popover-fade-in 0.2s ease-out;
}

@keyframes popover-fade-in {
  from {
    opacity: 0;
    transform: scale(0.95);
  }
  to {
    opacity: 1;
    transform: scale(1);
  }
}

/* Submenu */
.sub {
  position: relative;
}

.subContent {
  position: absolute;
  left: 100%;
  top: 0;
  margin-left: 4px;
}

.item {
  padding: 8px 12px;
  cursor: pointer;
  border-radius: 4px;
  transition: background-color 0.2s;
}

.item:hover {
  background-color: var(--color-accent, #f3f4f6);
}

.separator {
  height: 1px;
  background-color: var(--color-border, #e5e7eb);
  margin: 4px 0;
}",
  "Popover.tsx": "import React, { createContext, useContext, useState } from 'react';
import {
  useFloating,
  autoUpdate,
  offset,
  flip,
  shift,
  useClick,
  useHover,
  useDismiss,
  useRole,
  useInteractions,
  safePolygon,
  Placement,
} from '@floating-ui/react';
import styles from './Popover.module.css';
type PopoverContextType = {
  isOpen: boolean;
  setIsOpen: (open: boolean) => void;
  variant: string;
  size: string;
  refs: ReturnType<typeof useFloating>['refs'];
  floatingStyles: React.CSSProperties;
  getReferenceProps: (userProps?: React.HTMLProps<Element>) => Record<string, unknown>;
  getFloatingProps: (userProps?: React.HTMLProps<HTMLElement>) => Record<string, unknown>;
};

const PopoverContext = createContext<PopoverContextType | undefined>(undefined);

const usePopover = () => {
  const context = useContext(PopoverContext);
  if (!context) {
    throw new Error('Popover compound components must be used within a Popover.Root');
  }
  return context;
};

export interface PopoverProps {
  /** Controlled open state */
  isOpen?: boolean;
  /** Callback for open state changes */
  onOpenChange?: (open: boolean) => void;
  /** Placement relative to trigger @default 'bottom' */
  placement?: 'top' | 'bottom' | 'left' | 'right';
  /** Alignment relative to trigger @default 'center' */
  alignment?: 'start' | 'center' | 'end';
  /** Trigger type @default 'click' */
  trigger?: 'click' | 'hover';
  /** Whether to close when clicking outside @default true */
  closeOnClickOutside?: boolean;
  /** Whether to close when pressing Escape @default true */
  closeOnEscape?: boolean;
  /** Visual variant @default 'default' */
  variant?: 'default' | 'minimal';
  /** Size @default 'md' */
  size?: 'sm' | 'md' | 'lg';
  /** Additional class name */
  className?: string;
  /** Content */
  children?: React.ReactNode;
}

/**
 * Popover.Root - Container that manages the state
 */
export const PopoverRoot: React.FC<PopoverProps> = ({
  isOpen: controlledOpen,
  onOpenChange,
  placement = 'bottom',
  alignment = 'center',
  trigger = 'click',
  closeOnClickOutside = true,
  closeOnEscape = true,
  variant = 'default',
  size = 'md',
  children,
}) => {
  const [internalOpen, setInternalOpen] = useState(false);
  const isOpen = controlledOpen !== undefined ? controlledOpen : internalOpen;

  const setIsOpen = (open: boolean) => {
    if (controlledOpen === undefined) {
      setInternalOpen(open);
    }
    onOpenChange?.(open);
  };

  const floatingPlacement = \`\${placement}\${alignment === 'center' ? '' : '-' + alignment}\` as Placement;

  const { refs, floatingStyles, context } = useFloating({
    open: isOpen,
    onOpenChange: setIsOpen,
    placement: floatingPlacement,
    middleware: [offset(8), flip(), shift({ padding: 8 })],
    whileElementsMounted: autoUpdate,
  });

  const click = useClick(context, { enabled: trigger === 'click' });
  const hover = useHover(context, { enabled: trigger === 'hover', handleClose: safePolygon() });
  const dismiss = useDismiss(context, { escapeKey: closeOnEscape, outsidePress: closeOnClickOutside });
  const role = useRole(context);

  const { getReferenceProps, getFloatingProps } = useInteractions([
    click,
    hover,
    dismiss,
    role,
  ]);

  return (
    <PopoverContext.Provider value={{ isOpen, setIsOpen, variant, size, refs, floatingStyles, getReferenceProps, getFloatingProps }}>
      {children}
    </PopoverContext.Provider>
  );
};

/**
 * Popover.Trigger - The element that toggles the popover
 */
export const PopoverTrigger: React.FC<{ children: React.ReactNode; className?: string }> = ({
  children,
  className = '',
}) => {
  const { refs, getReferenceProps } = usePopover();

  return (
    <div
      ref={refs.setReference}
      className={\`\${styles.trigger} \${className}\`}
      {...getReferenceProps()}
    >
      {children}
    </div>
  );
};

/**
 * Popover.Content - The floating panel
 */
export const PopoverContent: React.FC<{ children: React.ReactNode; className?: string }> = ({
  children,
  className = '',
}) => {
  const { isOpen, refs, floatingStyles, getFloatingProps, variant, size } = usePopover();

  if (!isOpen) return null;

  return (
    <div
      ref={refs.setFloating}
      style={floatingStyles}
      className={\`
        \${styles.content}
        \${styles[\`variant-\${variant}\`]}
        \${styles[\`size-\${size}\`]}
        \${isOpen ? styles['content-open'] : ''}
        \${className}
      \`}
      {...getFloatingProps()}
    >
      {children}
    </div>
  );
};

/**
 * Popover.Item - An item within the popover content
 */
export const PopoverItem: React.FC<{
  children: React.ReactNode;
  className?: string;
  onClick?: () => void;
  closeOnClick?: boolean;
}> = ({ children, className = '', onClick, closeOnClick = true }) => {
  const { setIsOpen } = usePopover();

  const handleClick = () => {
    onClick?.();
    if (closeOnClick) {
      setIsOpen(false);
    }
  };

  return (
    <div className={\`\${styles.item} \${className}\`} onClick={handleClick}>
      {children}
    </div>
  );
};

/**
 * Popover.Separator - A divider between items
 */
export const PopoverSeparator: React.FC<{ className?: string }> = ({ className = '' }) => (
  <div className={\`\${styles.separator} \${className}\`} />
);

/**
 * Popover.Sub - Nested popover for submenus
 */
export const PopoverSub: React.FC<{ children: React.ReactNode; className?: string }> = ({
  children,
  className = '',
}) => {
  const [isOpen, setIsOpen] = useState(false);

  return (
    <div
      className={\`\${styles.sub} \${className}\`}
      onMouseEnter={() => setIsOpen(true)}
      onMouseLeave={() => setIsOpen(false)}
    >
      {children}
    </div>
  );
};

/**
 * Popover.SubTrigger - Trigger for submenus
 */
export const PopoverSubTrigger: React.FC<{ children: React.ReactNode; className?: string }> = ({
  children,
  className = '',
}) => (
  <div className={\`\${styles.item} \${styles.subTrigger} \${className}\`}>
    {children}
  </div>
);

/**
 * Popover.SubContent - Content for submenus
 */
export const PopoverSubContent: React.FC<{ children: React.ReactNode; className?: string }> = ({
  children,
  className = '',
}) => {
  // Accessing parent context for styling consistency
  const context = usePopover();
  
  return (
    <div className={\`
      \${styles.content}
      \${styles.subContent}
      \${styles[\`variant-\${context.variant}\`]}
      \${styles[\`size-\${context.size}\`]}
      \${className}
    \`}>
      {children}
    </div>
  );
};

/**
 * Main Popover Component
 */
export const Popover: React.FC<PopoverProps> & {
  Root: typeof PopoverRoot;
  Trigger: typeof PopoverTrigger;
  Content: typeof PopoverContent;
  Item: typeof PopoverItem;
  Separator: typeof PopoverSeparator;
  Sub: typeof PopoverSub;
  SubTrigger: typeof PopoverSubTrigger;
  SubContent: typeof PopoverSubContent;
} = (props) => {
  return (
    <PopoverRoot {...props}>
      {props.children}
    </PopoverRoot>
  );
};

Popover.Root = PopoverRoot;
Popover.Trigger = PopoverTrigger;
Popover.Content = PopoverContent;
Popover.Item = PopoverItem;
Popover.Separator = PopoverSeparator;
Popover.Sub = PopoverSub;
Popover.SubTrigger = PopoverSubTrigger;
Popover.SubContent = PopoverSubContent;

export default Popover;
",
  "README.md": "# Popover

Generated by Crucible v1.0.0 | Theme: minimal | Framework: react

## Variants
- \`default\`- \`minimal\`

## Sizes
- \`sm\`- \`md\`- \`lg\`

## States
- \`open\`- \`closed\`

## CSS Variables Used

\`\`\`css
:root {
  --card-header-padding: calc(var(--spacing-unit) * 6);
  --card-content-padding: calc(var(--spacing-unit) * 6);
  --card-footer-padding: calc(var(--spacing-unit) * 6);
  --card-border-radius: var(--radius-lg);
  --card-background-color: var(--color-surface);
  --card-border-color: var(--color-border);
  --card-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.06);
  --button-height-sm: calc(var(--spacing-unit) * 9);
  --button-height-md: calc(var(--spacing-unit) * 10);
  --button-height-lg: calc(var(--spacing-unit) * 11);
  --button-padding-x-sm: calc(var(--spacing-unit) * 3);
  --button-padding-x-md: calc(var(--spacing-unit) * 4);
  --button-padding-x-lg: calc(var(--spacing-unit) * 8);
  --button-border-radius: var(--radius-md);
  --button-font-weight: 500;
  --button-transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
  --input-height: calc(var(--spacing-unit) * 10);
  --input-padding-x: calc(var(--spacing-unit) * 3);
  --input-border-radius: var(--radius-md);
  --input-border-color: var(--color-border);
  --input-transition: border-color 0.2s ease, box-shadow 0.2s ease;
  --Dialog-padding: calc(var(--spacing-unit) * 6);
  --Dialog-border-radius: var(--radius-lg);
  --Dialog-overlay-bg: rgba(0, 0, 0, 0.4);
  --Dialog-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04);
  --Dialog-z-index: 1000;
  --select-height: calc(var(--spacing-unit) * 10);
  --select-padding-x: calc(var(--spacing-unit) * 3);
  --select-border-radius: var(--radius-md);
  --select-option-padding: calc(var(--spacing-unit) * 2.5);
  --select-dropdown-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --select-z-index: 900;
  --table-row-height: calc(var(--spacing-unit) * 10);
  --table-header-height: calc(var(--spacing-unit) * 10);
  --table-border-radius: var(--radius-md);
  --table-pagination-height: calc(var(--spacing-unit) * 8);
  --table-virtual-overscan: 5;
  --table-cell-padding: calc(var(--spacing-unit) * 3);
  --table-row-hover-bg: var(--color-secondary);
  --table-striped-bg: var(--color-background);
  --popover-background: var(--color-surface);
  --popover-border: var(--color-border);
  --popover-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --popover-radius: var(--radius-md);
  --popover-padding: calc(var(--spacing-unit) * 2);
  --popover-z-index: 50;
  --color-primary: #000;
  --color-secondary: #F3F2FF;
  --color-surface: #fff;
  --color-background: #F8F9FA;
  --color-border: #E2E1F0;
  --color-text: #1A1A2E;
  --color-text-muted: #6B6B8A;
  --color-destructive: #E24B4A;
  --color-success: #1D9E75;
  --color-primary-foreground: #fff;
  --color-secondary-foreground: #1A1A2E;
  --color-destructive-foreground: #fff;
  --color-accent-foreground: #1A1A2E;
  --foreground: #1A1A2E;
  --radius-sm: 4px;
  --radius-md: 4px;
  --radius-lg: 12px;
  --spacing-unit: 4px;
  --font-family: system-ui, sans-serif;
  --font-size-base: 16px;
}
\`\`\`


---

_This file is auto-generated. Edit the source template or run \`crucible upgrade\` after updating your config._
",
}
`;

exports[`Popover Component Snapshots > renders monolithic Popover correctly 1`] = `
{
  "Popover.module.css": ".popover {
  position: relative;
  display: inline-block;
}

.trigger {
  cursor: pointer;
  display: inline-block;
}

.content {
  position: absolute;
  z-index: var(--popover-z-index, 50);
  background: var(--popover-background, var(--color-surface));
  border: 1px solid var(--popover-border, var(--color-border));
  border-radius: var(--popover-radius, var(--radius-md));
  box-shadow: var(--popover-shadow, 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05));
  padding: var(--popover-padding, calc(var(--spacing-unit) * 2));
  min-width: 180px;
  overflow: hidden;
}

/* Variants */
.variant-minimal {
  border: none;
  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
}

/* Sizes */
.size-sm {
  font-size: 0.875rem;
  padding: calc(var(--popover-padding) * 0.75);
}

.size-md {
  font-size: 1rem;
}

.size-lg {
  font-size: 1.125rem;
  padding: calc(var(--popover-padding) * 1.5);
}

/* Animation */
.content-open {
  animation: popover-fade-in 0.2s ease-out;
}

@keyframes popover-fade-in {
  from {
    opacity: 0;
    transform: scale(0.95);
  }
  to {
    opacity: 1;
    transform: scale(1);
  }
}

/* Submenu */
.sub {
  position: relative;
}

.subContent {
  position: absolute;
  left: 100%;
  top: 0;
  margin-left: 4px;
}

.item {
  padding: 8px 12px;
  cursor: pointer;
  border-radius: 4px;
  transition: background-color 0.2s;
}

.item:hover {
  background-color: var(--color-accent, #f3f4f6);
}

.separator {
  height: 1px;
  background-color: var(--color-border, #e5e7eb);
  margin: 4px 0;
}",
  "Popover.tsx": "import React, { createContext, useContext, useState } from 'react';
import {
  useFloating,
  autoUpdate,
  offset,
  flip,
  shift,
  useClick,
  useHover,
  useDismiss,
  useRole,
  useInteractions,
  safePolygon,
  Placement,
} from '@floating-ui/react';
import styles from './Popover.module.css';

export interface PopoverProps {
  /** Controlled open state */
  isOpen?: boolean;
  /** Callback for open state changes */
  onOpenChange?: (open: boolean) => void;
  /** Placement relative to trigger @default 'bottom' */
  placement?: 'top' | 'bottom' | 'left' | 'right';
  /** Alignment relative to trigger @default 'center' */
  alignment?: 'start' | 'center' | 'end';
  /** Trigger type @default 'click' */
  trigger?: 'click' | 'hover';
  /** Whether to close when clicking outside @default true */
  closeOnClickOutside?: boolean;
  /** Whether to close when pressing Escape @default true */
  closeOnEscape?: boolean;
  /** Visual variant @default 'default' */
  variant?: 'default' | 'minimal';
  /** Size @default 'md' */
  size?: 'sm' | 'md' | 'lg';
  /** Additional class name */
  className?: string;
  /** Content */
  children?: React.ReactNode;
}


/**
 * Main Popover Component
 */
export const Popover: React.FC<PopoverProps> & {
} = (props) => {
  const {
    isOpen: controlledOpen,
    onOpenChange,
    placement = 'bottom',
    alignment = 'center',
    trigger = 'click',
    closeOnClickOutside = true,
    closeOnEscape = true,
    variant = 'default',
    size = 'md',
    children,
    className = '',
  } = props;

  const [internalOpen, setInternalOpen] = useState(false);
  const isOpen = controlledOpen !== undefined ? controlledOpen : internalOpen;

  const setIsOpen = (open: boolean) => {
    if (controlledOpen === undefined) {
      setInternalOpen(open);
    }
    onOpenChange?.(open);
  };

  const floatingPlacement = \`\${placement}\${alignment === 'center' ? '' : '-' + alignment}\` as Placement;

  const { refs, floatingStyles, context } = useFloating({
    open: isOpen,
    onOpenChange: setIsOpen,
    placement: floatingPlacement,
    middleware: [offset(8), flip(), shift({ padding: 8 })],
    whileElementsMounted: autoUpdate,
  });

  const click = useClick(context, { enabled: trigger === 'click' });
  const hover = useHover(context, { enabled: trigger === 'hover', handleClose: safePolygon() });
  const dismiss = useDismiss(context, { escapeKey: closeOnEscape, outsidePress: closeOnClickOutside });
  const role = useRole(context);

  const { getReferenceProps, getFloatingProps } = useInteractions([
    click,
    hover,
    dismiss,
    role,
  ]);

  return (
    <div className={className}>
      <div
        ref={refs.setReference}
        {...getReferenceProps()}
        className={styles.trigger}
      >
        {Array.isArray(children) ? children[0] : 'Trigger'}
      </div>
      {isOpen && (
        <div
          ref={refs.setFloating}
          style={floatingStyles}
          className={\`
            \${styles.content}
            \${styles[\`variant-\${variant}\`]}
            \${styles[\`size-\${size}\`]}
            \${styles['content-open']}
          \`}
          {...getFloatingProps()}
        >
          {Array.isArray(children) ? children.slice(1) : children}
        </div>
      )}
    </div>
  );
};


export default Popover;
",
  "README.md": "# Popover

Generated by Crucible v1.0.0 | Theme: minimal | Framework: react

## Variants
- \`default\`- \`minimal\`

## Sizes
- \`sm\`- \`md\`- \`lg\`

## States
- \`open\`- \`closed\`

## CSS Variables Used

\`\`\`css
:root {
  --card-header-padding: calc(var(--spacing-unit) * 6);
  --card-content-padding: calc(var(--spacing-unit) * 6);
  --card-footer-padding: calc(var(--spacing-unit) * 6);
  --card-border-radius: var(--radius-lg);
  --card-background-color: var(--color-surface);
  --card-border-color: var(--color-border);
  --card-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.06);
  --button-height-sm: calc(var(--spacing-unit) * 9);
  --button-height-md: calc(var(--spacing-unit) * 10);
  --button-height-lg: calc(var(--spacing-unit) * 11);
  --button-padding-x-sm: calc(var(--spacing-unit) * 3);
  --button-padding-x-md: calc(var(--spacing-unit) * 4);
  --button-padding-x-lg: calc(var(--spacing-unit) * 8);
  --button-border-radius: var(--radius-md);
  --button-font-weight: 500;
  --button-transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
  --input-height: calc(var(--spacing-unit) * 10);
  --input-padding-x: calc(var(--spacing-unit) * 3);
  --input-border-radius: var(--radius-md);
  --input-border-color: var(--color-border);
  --input-transition: border-color 0.2s ease, box-shadow 0.2s ease;
  --Dialog-padding: calc(var(--spacing-unit) * 6);
  --Dialog-border-radius: var(--radius-lg);
  --Dialog-overlay-bg: rgba(0, 0, 0, 0.4);
  --Dialog-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04);
  --Dialog-z-index: 1000;
  --select-height: calc(var(--spacing-unit) * 10);
  --select-padding-x: calc(var(--spacing-unit) * 3);
  --select-border-radius: var(--radius-md);
  --select-option-padding: calc(var(--spacing-unit) * 2.5);
  --select-dropdown-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --select-z-index: 900;
  --table-row-height: calc(var(--spacing-unit) * 10);
  --table-header-height: calc(var(--spacing-unit) * 10);
  --table-border-radius: var(--radius-md);
  --table-pagination-height: calc(var(--spacing-unit) * 8);
  --table-virtual-overscan: 5;
  --table-cell-padding: calc(var(--spacing-unit) * 3);
  --table-row-hover-bg: var(--color-secondary);
  --table-striped-bg: var(--color-background);
  --popover-background: var(--color-surface);
  --popover-border: var(--color-border);
  --popover-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --popover-radius: var(--radius-md);
  --popover-padding: calc(var(--spacing-unit) * 2);
  --popover-z-index: 50;
  --color-primary: #000;
  --color-secondary: #F3F2FF;
  --color-surface: #fff;
  --color-background: #F8F9FA;
  --color-border: #E2E1F0;
  --color-text: #1A1A2E;
  --color-text-muted: #6B6B8A;
  --color-destructive: #E24B4A;
  --color-success: #1D9E75;
  --color-primary-foreground: #fff;
  --color-secondary-foreground: #1A1A2E;
  --color-destructive-foreground: #fff;
  --color-accent-foreground: #1A1A2E;
  --foreground: #1A1A2E;
  --radius-sm: 4px;
  --radius-md: 4px;
  --radius-lg: 12px;
  --spacing-unit: 4px;
  --font-family: system-ui, sans-serif;
  --font-size-base: 16px;
}
\`\`\`


---

_This file is auto-generated. Edit the source template or run \`crucible upgrade\` after updating your config._
",
}
`;
